--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,1 +1,33 @@
-
+@import "global/fonts.scss";
+@import "global/global.scss";
+@import "mixines.scss";
+@import "variables.scss";
+@import "blocks/container.scss";
+@import "blocks/semantic-header.scss";
+@import "blocks/achievement.scss";
+@import "blocks/app.scss";
+@import "blocks/banner.scss";
+@import "blocks/btn.scss";
+@import "blocks/contacts.scss";
+@import "blocks/content-block.scss";
+@import "blocks/control-bar.scss";
+@import "blocks/download.scss";
+@import "blocks/features.scss";
+@import "blocks/filtres.scss";
+@import "blocks/form.scss";
+@import "blocks/gallery.scss";
+@import "blocks/gallery-item.scss";
+@import "blocks/index-footer.scss";
+@import "blocks/main-nav.scss";
+@import "blocks/name.scss";
+@import "blocks/nav-list.scss";
+@import "blocks/page-footer.scss";
+@import "blocks/page-header.scss";
+@import "blocks/pop-up.scss";
+@import "blocks/price-list.scss";
+@import "blocks/slider.scss";
+@import "blocks/social-btn.scss";
+@import "blocks/testimonials.scss";
+@import "blocks/textarea.scss";
+@import "blocks/user-area.scss";
+@import "blocks/your-post.scss";
