--- a/sass/blocks/container.scss
+++ b/sass/blocks/container.scss
@@ -6,3 +6,16 @@
 .container--grey {
   background-color: #f2f2f2;
 }
+
+@media(min-width:$tablet) {
+  .container--grey {
+    background-color: transparent;
+  }
+}
+
+@media(min-width:$desktop) {
+  .container {
+    padding: 0;
+    margin: 0px;
+  }
+}
