--- a/sass/style.scss
+++ b/sass/style.scss
@@ -25,6 +25,7 @@
 @import "blocks/page-header.scss";
 @import "blocks/pop-up.scss";
 @import "blocks/price-list.scss";
+@import "blocks/research.scss";
 @import "blocks/slider.scss";
 @import "blocks/social-btn.scss";
 @import "blocks/testimonials.scss";
