--- a/sass/blocks/btn.scss
+++ b/sass/blocks/btn.scss
@@ -25,15 +25,6 @@
     background-color: transparent;
   }
 
-  &--invert {
-    margin-top: 28px;
-    padding: 15px 30px;
-    color: #ffffff;
-    text-decoration: none;
-    border-color: #ffffff;
-    border-radius: 60px;
-  }
-
   &--send {
     display: block;
     margin: 29px auto;
@@ -45,11 +36,70 @@
     border-radius: 0px;
     text-transform: uppercase;
   }
-  &--download-block {
+  &--download {
     padding: 16px 0;
     color: #ffffff;
     border: 3px solid #ffffff;
     border-radius: 55px;
     background: transparent;
+  }
+}
+
+@media(min-width:$tablet) {
+  .btn {
+    &--post {
+      width: 260px;
+      margin-left: 38px;
+      margin-top: -52px;
+    }
+    &--disabled {
+      width: 260px;
+      margin-top: 25px;
+      margin-left: 37px;
+    }
+
+    &--send {
+      width: 300px;
+      margin: 0px;
+      padding: 20px 53px;
+    }
+
+    &--download {
+      margin-top: 32px;
+      width: 297px;
+    }
+  }
+}
+
+@media(min-width:$desktop) {
+  .btn {
+    &--post {
+      float: left;
+      width: 183px;
+      margin-top: 0px;
+      margin-left: 0px;
+      margin-right: 10px;
+    }
+
+    &--disabled {
+      float: right;
+      width: 183px;
+      margin-right: 0px;
+      margin-left: 22px;
+      margin-top: 0px;
+    }
+
+    &--send {
+      font-family: $font-bold;
+    }
+
+    &--invert {
+      width: 300px;
+      margin-top: 54px;
+      padding: 13px 10px;
+      font-family: $font-bold;
+      font-size: 21px;
+      line-height: 21px;
+    }
   }
 }
