--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -29,3 +29,98 @@
     border: $form-border;
   }
 }
+
+@media(min-width:$tablet) {
+  .contacts {
+    order: 3;
+    margin-top: 25px;
+  }
+
+  .contacts__fields {
+    width: 620px;
+    padding-top: 40px;
+    border: 2px solid #e5e5e5;
+    .form__text--pink {
+      display: block;
+      width: auto;
+      padding: 0 32px;
+      font-size: 14px;
+    }
+  }
+
+  .contacts__phone,
+  .contacts__email{
+    display: flex;
+    flex-direction: column-reverse;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    position: relative;
+    width: 500px;
+    margin: 0 auto;
+    input {
+      width: 100%;
+      margin-bottom: 11px;
+    }
+
+    .phone::after,
+    .mail::after {
+      content: "";
+      position: absolute;
+      top: 2px;
+      right: 0px;
+      width: 60px;
+      height: 60px;
+      background-size: contain;
+    }
+
+    .phone::after {
+      background: url("../img/icon-phone.svg") no-repeat center;
+      background-color: #f5f5f5;
+    }
+
+    .mail::after {
+      background: url("../img/icon-mail.svg") no-repeat center;
+      background-color: #f5f5f5;
+    }
+
+    label {
+      padding-left: 20px;
+      padding-bottom: 28px;
+    }
+  }
+}
+
+@media(min-width:$desktop) {
+  .contacts {
+    width: 100%;
+    margin-top: 15px;
+    .contacts__fields {
+      width: 940px;
+      padding-top: 47px;
+    }
+  }
+
+  .contacts__phone,
+  .contacts__email {
+    width: 375px;
+    margin: 0px;
+    margin-top: -13px;
+    input {
+      margin-bottom: 10px;
+    }
+
+    label {
+      padding-bottom: 13px;
+    }
+  }
+  .contacts__phone {
+    float: left;
+    margin-left: 60px;
+    margin-right: 65px;
+  }
+
+  .contacts__email {
+    float: right;
+    margin-right: 60px;
+  }
+}
