--- a/sass/blocks/form.scss
+++ b/sass/blocks/form.scss
@@ -49,3 +49,68 @@
   width:280px;
   margin: 0 auto;
 }
+
+@media(min-width:$tablet) {
+  .form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .form fieldset {
+    padding: 0px;
+    padding-top: 35px;
+  }
+
+  .form__text {
+    display: block;
+    width: 510px;
+    padding-top: 92px;
+    padding-bottom: 35px;
+    font-size: 18px;
+    span {
+      display: inline;
+    }
+  }
+
+  .form__send {
+    display: flex;
+    justify-content: space-between;
+    width: 620px;
+    padding-top: 67px;
+    padding-bottom: 46px;
+    order: 6;
+
+    .form__desc {
+      padding-top: 18px;
+    }
+
+    .form__text {
+      display: inline;
+    }
+  }
+}
+
+@media(min-width:$desktop) {
+  .form {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 960px;
+    margin: 0 auto;
+    padding: 0 10px;
+  }
+
+  .form__text {
+    width: 795px;
+    padding-top: 93px;
+  }
+
+  .form__send {
+    width: 940px;
+    padding-top: 63px;
+    padding-bottom: 30px;
+  }
+  .form__desc--invisible {
+    display: inline;
+  }
+}
