--- a/sass/blocks/gallery-item.scss
+++ b/sass/blocks/gallery-item.scss
@@ -112,3 +112,71 @@
   height: 20px;
   background: url("../img/icon-heart.svg") center no-repeat;
 }
+
+@media(min-width:$tablet) {
+  .gallery-item:nth-child(odd) {
+    padding-left: 11px;
+  }
+
+  .gallery-item:nth-child(even) {
+    padding-right: 10px;
+  }
+
+  .gallery-item__pict {
+    width: 300px;
+    height: 300px;
+  }
+
+  .gallery-item__desc {
+    width: 300px;
+    height: 156px;
+    padding: 24px 26px 27px;
+  }
+
+  .gallery-item__user-name {
+    padding-left: 0px;
+  }
+
+  .gallery-item__like {
+    padding-left: 0px;
+  }
+
+  .gallery-item__like::before {
+    bottom: 25px;
+    right: 32px;
+    left: auto;
+  }
+}
+
+@media(min-width:$desktop) {
+  .gallery-item {
+    margin: 0px;
+    margin-bottom: 54px;
+  }
+
+  .gallery-item:nth-child(odd) {
+    padding-left: 0px;
+  }
+
+  .gallery-item:nth-child(even) {
+    padding-right: 0px;
+  }
+
+  .gallery-item__pict{
+    height: 400px;
+  }
+
+  .gallery-item__desc {
+    padding: 23px 28px 28px;
+  }
+
+  .gallery__desc--bottom {
+    padding-top: 3px;
+    padding-bottom: 67px;
+  }
+
+  .gallery-item__like::before {
+    bottom: 26px;
+    right: 29px;
+  }
+}
