--- a/sass/blocks/gallery.scss
+++ b/sass/blocks/gallery.scss
@@ -19,3 +19,77 @@
     padding-bottom: 42px;
   }
 }
+
+@media(min-width:$tablet) {
+  .gallery__desc {
+    padding-top: 94px;
+    width: 494px;
+    font-size: 18px;
+  }
+  
+  .gallery-item:nth-child(odd) {
+    padding-left: 11px;
+  }
+
+  .gallery-item:nth-child(even) {
+    padding-right: 10px;
+  }
+
+  .gallery-item__pict {
+    width: 300px;
+    height: 300px;
+  }
+
+  .gallery-item__desc {
+    width: 300px;
+    height: 156px;
+    padding: 24px 26px 27px;
+  }
+
+  .gallery-item__user-name {
+    padding-left: 0px;
+  }
+
+  .gallery-item__like {
+    padding-left: 0px;
+  }
+
+  .gallery-item__like::before {
+    bottom: 25px;
+    right: 32px;
+    left: auto;
+  }
+}
+
+@media(min-width:$desktop) {
+  .gallery-item {
+    margin: 0px;
+    margin-bottom: 54px;
+  }
+
+  .gallery-item:nth-child(odd) {
+    padding-left: 0px;
+  }
+
+  .gallery-item:nth-child(even) {
+    padding-right: 0px;
+  }
+
+  .gallery-item__pict{
+    height: 400px;
+  }
+
+  .gallery-item__desc {
+    padding: 23px 28px 28px;
+  }
+
+  .gallery__desc--bottom {
+    padding-top: 3px;
+    padding-bottom: 67px;
+  }
+
+  .gallery-item__like::before {
+    bottom: 26px;
+    right: 29px;
+  }
+}
