--- a/sass/blocks/name.scss
+++ b/sass/blocks/name.scss
@@ -35,3 +35,56 @@
   margin: 0 auto;
   padding-bottom: 17px;
 }
+
+@media(min-width:$tablet) {
+  .name {
+    order: 1;
+  }
+
+  .name__user-name {
+    width: 620px;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    span {
+      display: inline;
+    }
+  }
+
+  .name__data {
+    display: flex;
+    padding-bottom: 52px;
+    label {
+      align-self: flex-end;
+      padding-right: 18px;
+      padding-left: 0px;
+      padding-bottom: 16px;
+    }
+
+    input {
+      width: 100%;
+    }
+  }
+
+  .name__data:last-of-type {
+    padding-bottom: 0px;
+  }
+}
+
+@media(min-width:$desktop) {
+  .name {
+    margin: 0px;
+    .name__user-name {
+      width:435px;
+      padding-top: 47px;
+    }
+
+    label {
+      padding-right: 20px;
+      padding-bottom: 14px;
+    }
+  }
+
+  .name__data {
+    padding-bottom: 52px;
+  }
+}
