--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -11,3 +11,25 @@
   padding-left: 12px;
   padding-bottom: 49px;
 }
+
+@media(min-width:$tablet) {
+  .page-header__logo {
+    padding-top: 26px;
+    padding-bottom: 84px;
+    padding-left: 20px;
+    img {
+      width: 148px;
+      height: 40px;
+    }
+  }
+}
+
+@media (min-width:$desktop) {
+  .page-header__logo {
+    padding-left: 0px;
+    img {
+      width: 146px;
+      height: 42px;
+    }
+  }
+}
