--- a/sass/blocks/gallery.scss
+++ b/sass/blocks/gallery.scss
@@ -26,70 +26,25 @@
     width: 494px;
     font-size: 18px;
   }
-  
-  .gallery-item:nth-child(odd) {
-    padding-left: 11px;
-  }
-
-  .gallery-item:nth-child(even) {
-    padding-right: 10px;
-  }
-
-  .gallery-item__pict {
-    width: 300px;
-    height: 300px;
-  }
-
-  .gallery-item__desc {
-    width: 300px;
-    height: 156px;
-    padding: 24px 26px 27px;
-  }
-
-  .gallery-item__user-name {
-    padding-left: 0px;
-  }
-
-  .gallery-item__like {
-    padding-left: 0px;
-  }
-
-  .gallery-item__like::before {
-    bottom: 25px;
-    right: 32px;
-    left: auto;
+  .gallery__inner {
+    width: $tablet;
+    margin: 0 auto;
   }
 }
 
 @media(min-width:$desktop) {
-  .gallery-item {
-    margin: 0px;
-    margin-bottom: 54px;
+  .gallery__inner {
+    width: 940px;
+    margin: 0 auto;
   }
 
-  .gallery-item:nth-child(odd) {
-    padding-left: 0px;
-  }
-
-  .gallery-item:nth-child(even) {
-    padding-right: 0px;
-  }
-
-  .gallery-item__pict{
-    height: 400px;
-  }
-
-  .gallery-item__desc {
-    padding: 23px 28px 28px;
-  }
-
-  .gallery__desc--bottom {
-    padding-top: 3px;
-    padding-bottom: 67px;
-  }
-
-  .gallery-item__like::before {
-    bottom: 26px;
-    right: 29px;
+  .gallery__desc {
+    width: 600px;
+    padding-top: 93px;
+    padding-bottom: 87px;
+    &--bottom {
+      padding-top: 45px;
+      padding-bottom: 69px;
+    }
   }
 }
