--- a/sass/blocks/gallery-item.scss
+++ b/sass/blocks/gallery-item.scss
@@ -114,19 +114,14 @@
 }
 
 @media(min-width:$tablet) {
-  .gallery-item:nth-child(odd) {
-    padding-left: 11px;
+  .gallery-item {
+    margin: 0px;
+    margin-bottom: 19px;
   }
 
-  .gallery-item:nth-child(even) {
-    padding-right: 10px;
-  }
   .gallery-item--panoram {
-    padding-left: 0px;
-  }
-
-  .gallery-item__pict--panoram {
-    width: 100%;
+    padding-top: 30px;
+    margin-bottom: 48px;
   }
 
   .gallery-item__pict {
@@ -134,24 +129,53 @@
     height: 300px;
   }
 
+  .gallery-item__pict--panoram {
+    width: 100%;
+    height: 510px;
+  }
+
   .gallery-item__desc {
     width: 300px;
     height: 156px;
-    padding: 24px 26px 27px;
+    padding: 23px 26px 27px;
+    &--panoram {
+      flex-direction: initial;
+      flex-wrap: wrap;
+      width: 620px;
+      height: auto;
+    }
+  }
+
+  .gallery-item__user-text--panoram {
+    order: 3;
   }
 
   .gallery-item__user-name {
     padding-left: 0px;
+    &--panoram {
+      order: 1;
+    }
   }
 
   .gallery-item__like {
+    position: relative;
     padding-left: 0px;
+    &--panoram {
+      order: 2;
+      width: 123px;
+      padding-top: 5px;
+    }
   }
 
   .gallery-item__like::before {
     bottom: 25px;
     right: 32px;
     left: auto;
+  }
+
+  .gallery-item__like--panoram::before {
+    top: 2px;
+    right: 0px;
   }
 }
 
