let down footer on tablets in form

--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -51,6 +51,10 @@
     padding: 37px 0;
   }
 
+  .page-footer--form {
+    padding-top: 41px;
+  }
+
   .page-footer__inner {
     width: 620px;
     margin: 0 auto;
