Change old class name of button

--- a/sass/blocks/btn.scss
+++ b/sass/blocks/btn.scss
@@ -93,7 +93,7 @@
       font-family: $font-bold;
     }
 
-    &--invert {
+    &--download {
       width: 300px;
       margin-top: 54px;
       padding: 13px 10px;
