--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -78,6 +78,7 @@
 @media(min-width:$desktop) {
   .page-footer--index {
     padding: 11px 0;
+    padding-bottom: 80px;
   }
 
   .page-footer--form {
@@ -90,7 +91,7 @@
   .page-footer__inner {
     width: 940px;
     margin: 0 auto;
-    padding-top: 56px;
+    padding-top: 48px;
   }
 
   .page-footer__logo {
@@ -107,7 +108,7 @@
     line-height: 30px;
     a {
       top: 19px;
-    right: -4px;
+      right: -4px;
       width: 33px;
       height: 37px;
     }
