--- a/sass/blocks/price-list.scss
+++ b/sass/blocks/price-list.scss
@@ -237,7 +237,7 @@
   .price-list__package-title {
     font-size: 17px;
   }
-  
+
   .price-list__package-price {
     padding: 0;
     margin-top: 0;
@@ -292,7 +292,8 @@
     padding-bottom: 96px;
     padding-left: 10px;
     padding-right: 10px;
-    max-width: 940px;
+    padding-top: 93px;
+    max-width: 960px;
   }
 
   .price-list__slider {
@@ -303,6 +304,8 @@
   .price-list__options {
     width: 235px;
     padding: 15px 5px 14px 21px;
+    font-size: 18px;
+    line-height: 30px;
   }
 
   .price-list__package {
@@ -334,6 +337,8 @@
 
   .price-list__package-price {
     margin-top: 2px;
+    line-height: 30px;
+    font-size: 24px;
   }
 
   .price-list__icon {
