--- a/sass/blocks/gallery-item.scss
+++ b/sass/blocks/gallery-item.scss
@@ -210,4 +210,11 @@
     bottom: 26px;
     right: 29px;
   }
+  .gallery-item__pict--panoram {
+    position: relative;
+    left: 50%;
+    width: 1200px;
+    margin-left: -600px;
+    overflow: hidden;
+  }
 }
