Adaptation for desktop

--- a/sass/blocks/banner.scss
+++ b/sass/blocks/banner.scss
@@ -95,6 +95,13 @@
     padding-top: 241px;
     padding-bottom: 205px;
   }
+  .banner--form {
+    padding-top: 174px;
+    padding-bottom: 102px;
+  }
+  .banner__header--long {
+    width: 800px;
+  }
   .banner__inner-container {
     width: 1200px;
     margin: 0 auto;
