--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -92,6 +92,9 @@
     width: 940px;
     margin: 0 auto;
     padding-top: 48px;
+    &--gallery {
+      padding-top: 52px;
+    }
   }
 
   .page-footer__logo {
