Change color for grafics

--- a/sass/blocks/achievement.scss
+++ b/sass/blocks/achievement.scss
@@ -36,7 +36,7 @@
     left: 0px;
     width: 38px;
     height: 38px;
-    background: url(../img/icon-yes.svg) center no-repeat;
+    background: url(../img/icon-yes-pink.svg) center no-repeat;
     background-color: #ffffff;
     border: 2px solid #e5e5e5;
   }
