--- a/sass/blocks/features.scss
+++ b/sass/blocks/features.scss
@@ -2,6 +2,10 @@
   padding-top: 41px;
 }
 
+.features__desc {
+  position: relative;
+}
+
 .features__desc p {
   width: 280px;
   margin: 0 auto;
@@ -11,6 +15,16 @@
   text-align: center;
   font-size: 24px;
   line-height: 29px;
+}
+
+.features__desc::after {
+  content: "";
+  position: absolute;
+  bottom: -47px;
+  left: 0px;
+  width: 100%;
+  height: 48px;
+  background: url("../img/bg-triangle-white.svg") no-repeat center;
 }
 
 .features__wrap {
