Broken paths is deleted

--- a/sass/blocks/banner.scss
+++ b/sass/blocks/banner.scss
@@ -1,6 +1,6 @@
 .banner {
   margin-top: -70px;
-  background: url("../../img/bg-back-mobile@1x.jpg") no-repeat center 0px;
+  background: url("../img/bg-back-mobile@1x.jpg") no-repeat center 0px;
   background-size: cover;
 }
 
@@ -35,7 +35,7 @@
   left: 0px;
   width: 257px;
   height: 287px;
-  background: url("../../img/iphone-hand-mobile@1x.png") no-repeat center;
+  background: url("../img/iphone-hand-mobile@1x.png") no-repeat center;
 }
 
 .banner__header {
