--- a/sass/blocks/filtres.scss
+++ b/sass/blocks/filtres.scss
@@ -32,7 +32,7 @@
 
 .filters__contrast {
   margin-right: 18px;
-  background: url(../../img/icon-editor-contrast.svg) no-repeat center;
+  background: url(../img/icon-editor-contrast.svg) no-repeat center;
   background-size: 33px;
   border: none;
 }
