--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -10,7 +10,7 @@
   height: 34px;
   margin-top: 16px;
   margin-right: 7px;
-  background: url(../img/icon-menu-cross.svg) no-repeat center;
+  background: url("../img/icon-menu-cross.svg") no-repeat center;
   background-size: 24px;
   border: none;
 }
