--- a/sass/blocks/testimonials.scss
+++ b/sass/blocks/testimonials.scss
@@ -21,8 +21,8 @@
 
 .testimonials {
   position: relative;
-  width: 280px;
   margin: 0 auto;
+  padding: 0 20px;
   padding-top: 47px;
   background-color: #ffffff;
   text-align: center;
@@ -32,11 +32,12 @@
 .testimonials::after {
   content: "";
   position: absolute;
-  left: -29px;
+  left: 50%;
   bottom: -87px;
-  width: 320px;
+  width: 100%;
   height: 67px;
-  background: url(../img/bg-triangle-white.svg) no-repeat center;
+  margin-left: -50%;
+  background: url("../img/bg-triangle-white.svg") no-repeat center;
   background-size: cover;
   overflow: hidden;
 }
@@ -47,15 +48,14 @@
 
 @media(min-width:$tablet) {
   .testimonials {
-    width: 620px;
     margin: 0 auto;
     padding-top: 75px;
   }
 
   .testimonials::after {
-    bottom: -81px;
-    width: 657px;
-    margin-left: -36px;
+    height: 79px;
+    bottom: -85px;
+    width: 100%;
   }
 
   .testimonials__item {
@@ -90,7 +90,6 @@
 @media(min-width:$desktop) {
   .testimonials {
     position: relative;
-    width: 940px;
     padding-top: 186px;
     padding-bottom: 8px;
     &::before {
@@ -101,14 +100,13 @@
       width: 79px;
       height: 63px;
       margin-left: -39px;
-      background: url(../../img/icon-quotes.svg) no-repeat center;
+      background: url(../img/icon-quotes.svg) no-repeat center;
       background-size: contain;
     }
     &::after {
       bottom: -90px;
-      width: 1195px;
+      width: 100%;
       height: 101px;
-      margin-left: -109px;
     }
   }
 
