Some another fixes

--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -4,7 +4,7 @@
   background-color: rgba(0, 0, 0, 0.6);
 }
 
-.main-nav__toggle {
+.main-nav__toggle--open {
   float: right;
   width: 50px;
   height: 34px;
