--- a/sass/blocks/social-btn.scss
+++ b/sass/blocks/social-btn.scss
@@ -8,7 +8,7 @@
 }
 
 .social-btn__tw {
-  background: url(../img/icon-twitter.svg) no-repeat center;
+  background: url("../img/icon-twitter.svg") no-repeat center;
   background-size: 19px;
 }
 
