--- a/sass/blocks/banner.scss
+++ b/sass/blocks/banner.scss
@@ -54,12 +54,27 @@
   text-indent: 3px;
 }
 
+@media(min-width:$mobile) and (min-resolution:$retina-dpi) and (min-resolution:$retina-ppx) {
+  .banner__hand-picture::after {
+    background-image: url("../img/iphone-hand-mobile@2x.png");
+    background-size: contain;
+  }
+  .banner {
+    background-image: url("../img/bg-back-mobile@2x.jpg")
+  }
+}
+
 @media(min-width: $tablet) {
   .banner {
     position: relative;
-    padding-top: 141px;
-    padding-bottom: 139px;
+    margin-top: -109px;
+    padding: 160px 0;
+    background-image: url("../img/bg-back-tablet@1x.jpg");
     background-size: cover;
+  }
+  .banner--gallery {
+    padding-top: 179px;
+    padding-bottom: 141px;
   }
   .banner__inner-container {
     width: 660px;
@@ -73,11 +88,12 @@
     padding-top:  407px;
   }
   .banner__hand-picture:after {
-    bottom: -140px;
-    left: 150px;
-    width: 510px;
-    height: 547px;
-    background-size: 454px 545px;
+    bottom: -160px;
+    left: -19px;
+    width: 700px;
+    height: 545px;
+    background-image: url("../img/iphone-hand-tablet@1x.png");
+    background-size: 470px 546px;
   }
   .banner__header {
     width: 355px;
@@ -89,11 +105,22 @@
   }
 }
 
+@media(min-width:$tablet) and (min-resolution:$retina-dpi) and (min-resolution:$retina-ppx) {
+  .banner__hand-picture::after {
+    background-image: url("../img/iphone-hand-tablet@2x.png");
+    background-size: contain;
+  }
+  .banner {
+    background-image: url("../img/bg-back-tablet@2x.jpg")
+  }
+}
+
 @media(min-width:$desktop) {
   .banner{
     margin-top: -110px;
     padding-top: 241px;
     padding-bottom: 205px;
+    background-image: url("../img/bg-back-desktop@1x.jpg");
   }
   .banner--form {
     padding-top: 174px;
@@ -108,11 +135,24 @@
     position: relative;
   }
   .banner__hand-picture::after {
-    bottom: -205px;
-    left: 471px;
+    width: 1050px;
+    height: 645px;
+    bottom: -206px;
+    left: 150px;
+    background-image: url("../img/iphone-hand-desktop@1x.png");
   }
   .banner--gallery {
     padding-top: 175px;
     padding-bottom: 100px;
+  }
+}
+
+@media(min-width:$desktop) and (min-resolution:$retina-dpi) and (min-resolution:$retina-ppx) {
+  .banner__hand-picture::after {
+    background-image: url("../img/iphone-hand-desktop@2x.png");
+    background-size: contain;
+  }
+  .banner {
+    background-image: url("../img/bg-back-desktop@2x.jpg")
   }
 }
