--- a/sass/blocks/testimonials.scss
+++ b/sass/blocks/testimonials.scss
@@ -100,7 +100,7 @@
       width: 79px;
       height: 63px;
       margin-left: -39px;
-      background: url(../img/icon-quotes.svg) no-repeat center;
+      background: url("../img/icon-quotes.svg") no-repeat center;
       background-size: contain;
     }
     &::after {
